public/stylesheets/style.css
body {
  margin: 1em;
  font-family: 'Righteous', cursive;
  color: #337ab7;
}

#pageHeading {
  margin-bottom:.25em;
}

.text-box {
  margin-top: .5em;
  margin-bottom: .5em;
  padding: .5em;
  border-top: 4px solid #f4ab4a;
  border-bottom: 4px solid #f4ab4a;
}

.top-divider {
  margin: .25em;
  border-top: 4px solid #e8e7e5;
}
.successStory p {
  padding: 0 10% 0 10%;
}
.successStory img {
  margin: .7em 0 .7em 0;
  border: 4px solid #e8e7e5;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.right-side {
  padding-top: 2em;
  padding-bottom: 2em;
}
.sidebar{
  border-left: 1px solid #e8e7e5;
}

.sidebar img {
  margin-top: .6em;
  border: 3px solid #a8a6a1;
  max-width: 60%;
}

.footer {
  margin-top: 1em;
  margin-bottom: 1.5em;
  color: #a8a6a1;
}

/*putupforadoptionpage*/
.center-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
 }

.imageFrame {
  margin-bottom: 2em;
}

.navbar-right {
  display: inline-block;
}

